...
    <string name="color_blue">Blue</string>
    <string name="color_alpha">Alpha</string>
    <string name="dialog_tools_title">Tools</string>
    <string name="dialog_error_save_title">Error load/save File</string>
    <string name="dialog_error_sdcard_text">Check Image or SD-Card!</string>
    <string name="dialog_brush_width_text">Stroke Width</string>
    <string name="dialog_warning_new_image">Save Changes?</string>
    <string name="help_title">Help</string>
    <string name="help_content_eraser">Remove parts of the image like with an eraser.</string>
    <string name="help_content_brush">Tap on the symbols on the bottom bar to change the color or the brush size.</string>
    <string name="help_content_eyedropper">Tap on the image to select a color.</string>
    <string name="help_content_undo">Tap to undo your previous action.</string>
    <string name="help_content_redo">Tap to redo an undone action.</string>
    <string name="help_content_fill">Tap on the image to fill an area with the selected color.</string>
...
    <string name="help_content_shape">Choose a shape and tap it to insert the selected shape</string>
    <string name="help_content_layer">Create new layers or modify existing ones</string>
    <string name="help_content_color_chooser">Select or adjust a color</string>
    <string name="closing_security_question_title">Quit</string>
    <string name="closing_security_question">Save Changes?</string>
    <string name="closing_catroid_security_question_title">Back to project</string>
    <string name="menu_new_image">New image</string>
    <string name="menu_load_image">Load image</string>
    <string name="menu_save_image">Save image</string>
    <string name="menu_save_copy">Save copy</string>
    <string name="menu_new_image_empty_image">Empty Image</string>
    <string name="menu_hide_menu">Fullscreen</string>
    <string name="menu_show_menu">Exit fullscreen</string>
    <string name="menu_new_image_from_camera">New image from camera</string>
    <string name="pocketpaint_menu_about">@string/pocketpaint_about_title</string>
    <string name="menu_back">@string/closing_catroid_security_question_title</string>
    <string name="menu_export">Export</string>
    <string name="saved">Image saved</string>
    <string name="copy">Copy saved</string>
    <string name="menu_quit">Quit</string>
    <string name="save_button_text">Save</string>
    <string name="discard_button_text">Discard</string>

    <string name="resize_nothing_to_resize">nothing to resize</string>
    <string name="resize_max_image_resolution_reached">max image resolution reached</string>

    <string name="text_tool_dialog_input_title">Your text:</string>
    <string name="text_tool_dialog_format_options">Format options:</string>
...
    <string name="landscape">Landscape</string>
    <string name="intro_landscape_text">Pocket Paint also supports drawing in landscape mode to give you the best painting experience.</string>
    <string name="enjoy_pocket_paint">You are all set. Enjoy Pocket Paint.</string>
    <string name="intro_get_started">Get started and create a new masterpiece.</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>

    <string name="pocketpaint_about_title">About</string>
    <string name="pocketpaint_about_version">Version %s</string>
    <string name="pocketpaint_about_license">GNU Affero General Public License, v3</string>
    <string name="pocketpaint_about_content">Pocket Paint is a picture editing library that is part of the Catrobat project.\n\nCatrobat is a visual programming language and set of creativity tools for smartphones, tablets and mobile browsers.\n\nThe source code of Pocket Paint is mainly licensed under the %s.\nFor precise details of the license see the link below.</string>
    <string name="pocketpaint_about_url_license_description">Pocket Paint Source Code License</string>
...
